<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather</string>
    <string name="add_city_label">Add City</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_city">Delete City?</string>

    <string name="temp_format">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Wind in kph -->
    <string name="wind_format">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
    </string>

    <string name="humidity_format">
      <xliff:g id="humidity">%1.0f</xliff:g>%%
    </string>

    <string name="cloud_coverage_format">
        <xliff:g id="cloud">%1.0f</xliff:g>%%
    </string>


    <string name="city_name_format">%s, %s</string>
    <string name="temp_name_format">%s/%s</string>
    <string name="wind_label">Wind</string>
    <string name="humidity_label">Humidity</string>
    <string name="cloud_label">Cloud Coverage</string>
    <string name="rain_label">Chance of Rain</string>
    <string name="additional_info">Additional info</string>
    <string name="next_five_days">Next 5 days</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- Preference -->
    <string name="theme_title">Theme</string>
    <string name="unit_title">Temperature Units</string>
    <string name="share">Share</string>
    <string name="privacy">Privacy</string>
    <string name="contact_us">Report a Problem</string>
    <string name="open_source">Open Source Libraries</string>
    <string name="version">Version</string>
    <string name="reset_data_title">Delete Bookmarks</string>
    <string name="unit_default">metric</string>
    <string name="reset_data">This will delete all bookmarked cities.</string>
    <string name="reset_data_accept">Accept</string>
    <string name="help_web_url">https://openweatherhelp.netlify.app/</string>
    <string name="privacy_url">https://openweatherprivacy.netlify.app/</string>
    <string name="open_source_url">https://weatheropensource.netlify.app/</string>
    <string name="preference_key_help">help</string>
    <string name="preference_key_privacy">privacy</string>
    <string name="preference_key_contact_us">contact_us</string>
    <string name="preference_key_open_source">open_source</string>
    <string name="preference_key_version">version</string>
    <string name="preference_key_reset_data">reset_data</string>
    <string name="preference_key_units">units</string>
    <string name="preference_key_theme">theme</string>
    <string name="preference_email">suadahaji91@gmail.com</string>
    <string name="search">Search</string>
    <string name="content_description_search">Description For Search</string>
    <string name="version__format">Version %s</string>
    <string name="error_fetch_city">City not found</string>
    <string name="check_internet">Please check your internet settings</string>
    <string name="internet_error_label">No internet connection</string>

    <string name="weather_icon_desc">Weather icon</string>
    <string name="add_city_icon_desc">Add City</string>
    <string name="empty_list_label">No saved cities yet</string>
    <string name="empty_list_description">Tap the button below to add!</string>
    <string name="retry_label">Retry</string>
</resources>