<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="metric"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_values"
            app:key="units"
            app:title="@string/unit_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="Delete all bookmarked cities"
            app:key="reset_data"
            app:title="@string/reset_data_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/support_header">


    </PreferenceCategory>

</PreferenceScreen>