<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emptyListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/emptyListImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@id/emptyLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty_list" />

    <TextView
        android:id="@+id/emptyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center_horizontal"
        android:text="@string/empty_list_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/empty_list_description"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintTop_toBottomOf="@id/emptyLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retry_label"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:backgroundTint="@color/weather_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyDescription"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>